[MODCONSKC-63] Maximize coverage